[package]
name = "webble"
version = "0.0.0"
edition = "2024"
description = "A general purpose async multithreaded runtime for web"
readme = "README.md"
repository = "https://github.com/dsgallups/webble"
license = "MIT OR Apache-2.0"
keywords = ["async", "runtime", "wasm", "web"]

[dependencies]
async-channel = "2.5.0"
async-task = "4.7.1"
crossbeam-deque = "0.8.6"
wasm-bindgen = "0.2.123"
[dependencies.web-sys]
version = "0.3.95"
features = [
  # "CssStyleDeclaration",
  # "Document",
  # "DomRect",
  # "DomTokenList",
  # "Element",
  # "Event",
  # "FocusEvent",
  # "HtmlDivElement",
  # "HtmlDocument",
  # "HtmlElement",
  # "HtmlHeadElement",
  # "HtmlInputElement",
  # "InputEvent",
  # "KeyboardEvent",
  # "Location",
  # "MessageEvent",
  # "Navigator",
  # "Node",
  # "PointerEvent",
  # "PopStateEvent",
  # "ReadableStream",
  # "ReadableStreamDefaultReader",
  # "SvgElement",
  # "Text",
  # "WebTransport",
  # "WebTransportBidirectionalStream",
  # "WebTransportHash",
  # "WebTransportOptions",
  # "WebTransportReceiveStream",
  # "WebTransportSendStream",
  # "WheelEvent",
  # "Window",
  "Worker",
  "WorkerOptions",
  "WorkerType",
  # "WritableStream",
  # "WritableStreamDefaultWriter",
]
