[package]
name = "webble"
version = "0.0.2"
edition = "2024"
description = "A general purpose async multithreaded runtime for web"
readme = "README.md"
repository = "https://github.com/dsgallups/webble"
license = "MIT OR Apache-2.0"
keywords = ["async", "runtime", "wasm", "web"]

[dependencies]
async-channel = "2.5"
async-task = "4.7"
crossbeam-deque = "0.8"
tracing = "0.1.44"
wasm-bindgen = "0.2.125"

[dependencies.web-sys]
version = "0.3.102"
features = [
  "Worker",
  "WorkerOptions",
  "WorkerType",
]

[dev-dependencies]
wasm-bindgen-futures = "0.4.73"
wasm-bindgen-test = "0.3.73"

[features]
debug = []
